--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,7 +10,7 @@ keywords = ["charts", "highcharts", "gui", "ui", "web"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-nicegui = ">=1.3.18" # TODO: raise to 1.4.0 once released
+nicegui = "^1.4.0"
 
 [build-system]
 requires = [
