--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,20 +1,12 @@
 {
-  "autopep8.args": ["--max-line-length=120"],
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.formatOnSave": true,
   "prettier.printWidth": 120,
-  "pylint.args": [
-    "--disable=C0103", // Invalid name (e.g., variable/function/class naming conventions)
-    "--disable=C0114", // Missing module docstring
-    "--disable=C0115", // Missing class docstring
-    "--disable=C0301", // Line too long (exceeds character limit)
-    "--disable=R0913", // Too many arguments
-    "--disable=W0102" // Dangerous default value as argument
-  ],
+  "files.insertFinalNewline": true,
   "[python]": {
     "editor.defaultFormatter": "ms-python.autopep8",
     "editor.codeActionsOnSave": {
-      "source.organizeImports": "explicit"
+      "source.fixAll.ruff": "always"
     }
   }
 }
